[package]
name = "evident"
version = "0.1.0"
edition = "2021"
description = "Pub/Sub framework using IDs to identify events."
repository = "https://github.com/mhatzl/evident"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
