[package]
name = "evident"
version = "0.9.0"
edition = "2021"
description = "Pub/Sub library using IDs to identify events."
repository = "https://github.com/mhatzl/evident"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
once_cell = "1.13"
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
rayon = "1.7"
